--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             //     "/_sidebar.md": "/summary.md"
             // },
             search: {
-                maxAge: 86400000, // Expiration time, the default one day
+                maxAge: 300000, // Expiration time, 改成5min
                 paths: 'auto', // or 'auto'
                 placeholder: '搜索'
-            }
+            },
+            auto2top: true // 切换路径时自动滚动到顶
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
