--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             loadSidebar: true,
             maxLevel: 3,
             subMaxLevel: 3,
-            // alias: {
-            //     "/_sidebar.md": "/summary.md"
-            // },
+            alias: {
+                "/_sidebar.md": "/sidebar.md"
+            },
             search: {
                 maxAge: 300000, // Expiration time, 改成5min
                 paths: 'auto', // or 'auto'
