--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 <head></head>
 <body>
-<h1>Hello World</h1>
+<h1>Welcome to Dri.ink</h1>
+<script>window.location.href='/knowledge-base';</script>
 </body>
 </html>
